...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = "Contacts"
        
        initTableView(tableView: self.tableView)
        
        contactListPresenter.setDelegate(delegate: self)
        
        reloadContactList()
...
